# auto_field_properties

./: README.md  pyproject.toml
auto_field_properties/: AFP.py
